--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,11 @@
-version: "3.8"
-
 services:
-
   database:
     container_name: perusable-database
     environment:
       - POSTGRES_DB=perusable
       - POSTGRES_USER=perusable
       - POSTGRES_PASSWORD=perusable
-    image: postgres:15.2-alpine
+    image: postgres:16.1
     ports:
       - "5433:5432"
     volumes:
